--- a/package.json
+++ b/package.json
@@ -15,43 +15,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.5.7",
-    "@angular-devkit/build-ng-packagr": "~0.5.7",
-    "@angular/animations": "6.0.0",
-    "@angular/cli": "6.0.0",
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/core": "6.0.0",
-    "@angular/forms": "6.0.0",
-    "@angular/http": "6.0.0",
-    "@angular/language-service": "6.0.0",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
-    "@angular/router": "6.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^9.6.4",
-    "angular-in-memory-web-api": "0.6.0",
-    "codelyzer": "^4.0.1",
-    "core-js": "^2.5.5",
-    "jasmine-core": "~3.1.0",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-ng-packagr": "0.10.3",
+    "@angular/animations": "7.1.0-beta.1",
+    "@angular/cli": "7.0.3",
+    "@angular/common": "7.1.0-beta.1",
+    "@angular/compiler": "7.1.0-beta.1",
+    "@angular/compiler-cli": "7.1.0-beta.1",
+    "@angular/core": "7.1.0-beta.1",
+    "@angular/forms": "7.1.0-beta.1",
+    "@angular/http": "7.1.0-beta.1",
+    "@angular/language-service": "7.1.0-beta.1",
+    "@angular/platform-browser": "7.1.0-beta.1",
+    "@angular/platform-browser-dynamic": "7.1.0-beta.1",
+    "@angular/router": "7.1.0-beta.1",
+    "@types/jasmine": "2.8.9",
+    "@types/jasminewd2": "2.0.5",
+    "@types/node": "10.12.1",
+    "angular-in-memory-web-api": "0.6.1",
+    "codelyzer": "4.5.0",
+    "core-js": "2.5.7",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "ng-packagr": "3.0.0-rc.2",
-    "npm-run-all": "^4.1.2",
-    "protractor": "^5.3.1",
-    "rxjs": "^6.0.0-uncanny-rc.7",
-    "ts-node": "^6.0.0",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.9.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7",
-    "wait-on": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.4.0",
+    "ng-packagr": "4.4.0",
+    "npm-run-all": "4.1.3",
+    "protractor": "5.4.1",
+    "rxjs": "6.3.3",
+    "ts-node": "7.0.1",
+    "tsickle": "0.33.1",
+    "tslib": "1.9.3",
+    "tslint": "5.11.0",
+    "typescript": "^3.1.5",
+    "wait-on": "3.1.0",
     "zone.js": "^0.8.26"
   },
   "license": "(MIT OR Apache-2.0)",
