--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "version": 1,
   "newProjectRoot": "projects",
+  "defaultProject": "demo",
   "projects": {
     "demo": {
       "root": "",
@@ -103,10 +104,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
             "exclude": []
           }
         }
@@ -128,9 +126,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
+            "tsConfig": ["e2e/tsconfig.e2e.json"],
             "exclude": []
           }
         }
@@ -166,9 +162,7 @@
               "projects/lib/tsconfig.lint.json",
               "projects/lib/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -204,9 +198,7 @@
               "projects/se-neon/tsconfig.lint.json",
               "projects/se-neon/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -217,11 +209,11 @@
       "inlineTemplate": true,
       "inlineStyle": true,
       "spec": false,
-      "prefix": "app",
+      "prefix": "",
       "styleext": "css"
     },
     "@schematics/angular:directive": {
-      "prefix": "app"
+      "prefix": ""
     }
   }
 }
