--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/jasmine": "2.8.9",
     "@types/jasminewd2": "2.0.5",
     "@types/node": "10.12.1",
-    "angular-in-memory-web-api": "0.6.1",
+    "angular-in-memory-web-api": "^0.7.0",
     "codelyzer": "4.5.0",
     "core-js": "2.5.7",
     "jasmine-core": "3.3.0",
