--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@angular/platform-browser": "7.1.0-beta.1",
     "@angular/platform-browser-dynamic": "7.1.0-beta.1",
     "@angular/router": "7.1.0-beta.1",
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@types/jasmine": "2.8.9",
     "@types/jasminewd2": "2.0.5",
     "@types/node": "10.12.1",
