--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,11 @@
 {
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "cli": {
+    "defaultCollection": "demo"
+  },
   "newProjectRoot": "projects",
+
   "projects": {
     "demo": {
       "root": "",
