--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "~0.11.0-beta.0",
     "@angular-devkit/build-ng-packagr": "0.10.3",
-    "@angular/animations": "7.1.0-beta.1",
-    "@angular/cli": "7.0.3",
-    "@angular/common": "7.1.0-beta.1",
-    "@angular/compiler": "7.1.0-beta.1",
-    "@angular/compiler-cli": "7.1.0-beta.1",
-    "@angular/core": "7.1.0-beta.1",
-    "@angular/forms": "7.1.0-beta.1",
-    "@angular/http": "7.1.0-beta.1",
-    "@angular/language-service": "7.1.0-beta.1",
-    "@angular/platform-browser": "7.1.0-beta.1",
-    "@angular/platform-browser-dynamic": "7.1.0-beta.1",
-    "@angular/router": "7.1.0-beta.1",
+    "@angular/animations": "7.1.0-beta.2",
+    "@angular/cli": "7.1.0-beta.0",
+    "@angular/common": "7.1.0-beta.2",
+    "@angular/compiler": "7.1.0-beta.2",
+    "@angular/compiler-cli": "7.1.0-beta.2",
+    "@angular/core": "7.1.0-beta.2",
+    "@angular/forms": "7.1.0-beta.2",
+    "@angular/http": "7.1.0-beta.2",
+    "@angular/language-service": "7.1.0-beta.2",
+    "@angular/platform-browser": "7.1.0-beta.2",
+    "@angular/platform-browser-dynamic": "7.1.0-beta.2",
+    "@angular/router": "7.1.0-beta.2",
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
@@ -52,9 +52,9 @@
     "rxjs": "6.3.3",
     "ts-node": "7.0.1",
     "tsickle": "0.33.1",
-    "tslib": "1.9.3",
+    "tslib": "^1.9.0",
     "tslint": "5.11.0",
-    "typescript": "^3.1.5",
+    "typescript": "^3.1.6",
     "wait-on": "3.1.0",
     "zone.js": "^0.8.26"
   },
