--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jasminewd2": "2.0.5",
     "@types/node": "10.12.1",
     "angular-in-memory-web-api": "^0.7.0",
+    "angular2-template-loader": "^0.6.2",
     "codelyzer": "4.5.0",
     "core-js": "2.5.7",
     "jasmine-core": "3.3.0",
